--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>VIRL Editor</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body class="index">
+     <div id="strokeStyleAttr" class="form-group form-group-sm">
+        <label for="stroke-pattern">Border Pattern:</label>
+        <select class="form-control" id="stroke-pattern">
+            <!-- The letters A, B, C, D, E represent the line types graphics in the FontAnnotation font -->
+            <option value="solid">A</option>
+            <option value="dot">B</option>
+            <option value="dash">C</option>
+            <option value="dash-dot">D</option>
+            <option value="dash-dot-dot">E</option>
+        </select>
+    </div>    
+</body>
+
+</html>
