testing font squirrel demo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <title>VIRL Editor</title>
     <link rel="stylesheet" href="css/style.css" />
+    <style type="text/css">
+                    body{
+                font-family: 'font-annotationsregular';
+                            }
+    </style>
 </head>
 
 <body class="index">
