--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="index">
      <div id="strokeStyleAttr" class="form-group form-group-sm">
-        <label for="stroke-pattern">Border Pattern:</label>
+        <label for="stroke-pattern">Pattern:</label>
         <select class="form-control" id="stroke-pattern">
             <!-- The letters A, B, C, D, E represent the line types graphics in the FontAnnotation font -->
             <option value="solid">A</option>
@@ -22,6 +22,23 @@
             <option value="dash-dot">D</option>
             <option value="dash-dot-dot">E</option>
         </select>
+        <br>
+        <br>
+        <p>
+            A
+        </p>
+        <p>
+            B
+        </p>
+        <p>
+            C
+        </p>
+        <p>
+            D
+        </p>
+        <p>
+            E
+        </p>
     </div>    
 </body>
 
