changed hierarchy of files

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </style>
 </head>
 
-<body class="index">
-     <div id="strokeStyleAttr" class="form-group form-group-sm">
+<body>
+     <div id="strokeStyleAttr">
         <label for="stroke-pattern">Pattern:</label>
-        <select class="form-control" id="stroke-pattern">
+        <select>
             <!-- The letters A, B, C, D, E represent the line types graphics in the FontAnnotation font -->
             <option value="solid">A</option>
             <option value="dot">B</option>
