--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <label for="stroke-pattern">Pattern:</label>
         <select>
             <!-- The letters A, B, C, D, E represent the line types graphics in the FontAnnotation font -->
-            <option value="solid">A</option>
-            <option value="dot">B</option>
+            <option value="solid">&#65;</option>
+            <option value="dot">&#66;</option>
             <option value="dash">C</option>
             <option value="dash-dot">D</option>
             <option value="dash-dot-dot">E</option>
