testing font squirrel demo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>VIRL Editor</title>
     <link rel="stylesheet" href="css/style.css" />
     <style type="text/css">
-                    body{
+                    select{
                 font-family: 'font-annotationsregular';
                             }
     </style>
