--- a/index.html
+++ b/index.html
@@ -1,45 +1,61 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>VIRL Editor</title>
+        <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-<head>
-    <title>VIRL Editor</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <style type="text/css">
-                    option{
-                font-family: 'font-annotationsregular';
-                            }
-    </style>
-</head>
-
-<body>
-     <div id="strokeStyleAttr">
-        <label for="stroke-pattern">Pattern:</label>
-        <select>
-            <!-- The letters A, B, C, D, E represent the line types graphics in the FontAnnotation font -->
-            <option value="solid">&#65;</option>
-            <option value="dot">&#66;</option>
-            <option value="dash">C</option>
-            <option value="dash-dot">D</option>
-            <option value="dash-dot-dot">E</option>
-        </select>
-        <br>
-        <br>
-        <p>
-            A
-        </p>
-        <p>
-            B
-        </p>
-        <p>
-            C
-        </p>
-        <p>
-            D
-        </p>
-        <p>
-            E
-        </p>
-    </div>    
-</body>
-
+        <link rel="stylesheet" href="css/style.css" />
+        <style type="text/css">
+        body{
+        font-family: 'font-annotationsregular';
+        }
+        </style>
+    </head>
+    <body>
+        <div id="strokeStyleAttr">
+            <label for="stroke-pattern">Pattern:</label>
+            <select>
+                <!-- The letters A, B, C, D, E represent the line types graphics in the FontAnnotation font -->
+                <option value="solid">&#65;</option>
+                <option value="dot">&#66;</option>
+                <option value="dash">C</option>
+                <option value="dash-dot">D</option>
+                <option value="dash-dot-dot">E</option>
+            </select>
+            <br>
+            <br>
+            <p>
+                A
+            </p>
+            <p>
+                B
+            </p>
+            <p>
+                C
+            </p>
+            <p>
+                D
+            </p>
+            <p>
+                E
+            </p>
+            <!-- Single button -->
+            <div class="btn-group">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Action <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a href="#">A</a></li>
+                    <li><a href="#">B</a></li>
+                    <li><a href="#">C</a></li>
+                </ul>
+            </div>
+        </div>
+    </body>
 </html>
