testing bootstrap dropdown

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         font-family: 'font-annotationsregular';
         padding: 50px;
         }
+        select{
+            background-color : white; 
+        }
         .plainText{
             font-family: sans-serif;
         }
