--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Peto</title>
 <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<script type="text/javascript">
-	$.ajax({
-	method: "POST",
-  contentType: "application/json;charset=UTF-8",
-  url: "https://hr.pantheon.tech/cxf/accounts/login",
-  data: {  }
-}).done(function( msg ) {
-    alert( "Data Saved: " + msg );
-  });
-	
-</script>
+	<h1>My page</h1>
 </body>
 </html>
